embulk-docs: updated plugin crawler url

--- a/plugins/index.html.erb
+++ b/plugins/index.html.erb
@@ -66,7 +66,7 @@
 
     <div class="footer">
         &copy; Copyright 2015, Embulk Project.
-        Created using <a href="https://github.com/embulk/site-plugins">Embulk plugin crawler</a>.
+        Created using <a href="https://github.com/embulk/plugin-crawler">Embulk plugin crawler</a>.
     </div>
   </body>
 </html>
