embulk-docs: updated plugin page headline

--- a/plugins/index.html.erb
+++ b/plugins/index.html.erb
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>List of plugins | Embulk</title>
+    <title>List of Embulk Plugins by Category | Embulk</title>
     <link rel="stylesheet" href="../docs/_static/haiku.css" type="text/css" />
     <link rel="stylesheet" href="../docs/_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="plugins.css" type="text/css" />
@@ -12,12 +12,12 @@
   <body>
     <div class="header"><h1 class="heading"><a href="../docs/index.html">
         <span>Embulk plugins</span></a></h1>
-      <h2 class="heading"><span>Embulk plugins</span></h2>
+      <h2 class="heading"><span>by categories</span></h2>
     </div>
 
     <div class="content">
       <div class="section">
-        <h1>Plugins</h1>
+        <h1>List of Plugins by Category</h1>
 
         <% categories.each do |category,gems| %>
         <div class="section">
