embulk-docs: updated plugin page headline

--- a/plugins/index.html.erb
+++ b/plugins/index.html.erb
@@ -12,7 +12,7 @@
   <body>
     <div class="header"><h1 class="heading"><a href="../docs/index.html">
         <span>Embulk plugins</span></a></h1>
-      <h2 class="heading"><span>by categories</span></h2>
+      <h2 class="heading"><span>Embulk by category</span></h2>
     </div>
 
     <div class="content">
