--- a/plugins/index.html.erb
+++ b/plugins/index.html.erb
@@ -26,6 +26,7 @@
             <thead>
               <tr>
                   <th>Star</th>
+                  <th>Download</th>
                   <th>Name</th>
                   <th>Author</th>
                   <th>About</th>
@@ -46,6 +47,7 @@
                     </span>
                   </div>
                 </td>
+                <td style="width:2em"><%=h gem[:downloads] %></td>
                 <td style="min-width:9em"><a href="<%=h gem[:url] %>"><%=h gem[:name] %></a><pre class="install">$ embulk gem install <%=h gem[:gem_name] %></pre></td>
                 <td style="min-width:13em"><%=h gem[:author] %>
                   <% if gem[:avatar_url] %>
