--- a/plugins/index.html.erb
+++ b/plugins/index.html.erb
@@ -21,7 +21,7 @@
 
         <% categories.each do |category,gems| %>
         <div class="section">
-          <h2><%= category.upcase %></h2>
+          <h2 id="<%= category.gsub(/[^a-zA-Z0-9]/, '-') %>"><%= category.upcase %></h2>
           <table class="plugins">
             <thead>
               <tr>
